Pong customization menu now more presentable

--- a/frontend/service/components/pong/pong.html
+++ b/frontend/service/components/pong/pong.html
@@ -1,5 +1,5 @@
 <!-- Customization Menu -->
-<div id="dCustomizationOptions" hidden >
+<div id="dCustomizationOptions">
     <h2>Game Customization</h2>
     <form id="customizationForm">
         <div class="container py-3">
@@ -90,13 +90,16 @@
         </div>
     </form>
     <button id="startGameButton">Start Game</button>
+    <div class="instructions" id="instructions">
+        Controls: (up, down, powerup): L: W, S, D | R: (arrows): up, down, left
+    </div>
 </div>
 
-<div id="board-container"></div>
-    <div class="blinking-neon-frame p-3" id ="neonFrame" hidden>
+<!-- Game Board Container (Hidden Initially) -->
+<div id="board-container">
+    <div class="blinking-neon-frame p-3" id="neonFrame" hidden>
         <canvas id="board" hidden></canvas>  <!-- Initially hidden -->
     </div>
-    <div class="instructions" id="instructions" hidden> Controls: (up, down, powerup): L: W, S, D | R: (arrows): up, down, left </div>
 </div>
 
 <script type="module" src="app.js"></script>
