--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -35,7 +35,8 @@
                             <i class="bi bi-plus"></i>
                         </button>
                     </div>
-                    <div id="" class="mt-4">
+                    <div id="search-list-container" class="mt-4 collapsible">
+                        <div id="search-list"></div>
                         <!-- maybe i can render here possible matches? -->
                     </div>
                 </div>
