When game ends user is now redirected to pong menu & the settings persist

--- a/frontend/service/components/pong/pong.html
+++ b/frontend/service/components/pong/pong.html
@@ -1,5 +1,5 @@
 <!-- Customization Menu -->
-<div id="dCustomizationOptions">
+<div id="customizationMenu">
     <h2>Game Customization</h2>
     <form id="customizationForm">
         <div class="container py-3">
