--- a/frontend/service/components/pong/styles.css
+++ b/frontend/service/components/pong/styles.css
@@ -14,7 +14,7 @@
     border-radius: 6px;
 }
 
-#dCustomizationOptions {
+#customizationMenu {
     display: flex;
     flex-direction: column;
     align-items: center; /* Center items horizontally */
