starting to make new friends?

--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -22,9 +22,9 @@
             <div class="card ctm-card p-5">
                 <!-- <div class="card-body"> -->
                     <h2 class="ctm-text-title text-center">New friends</h2>
-                    <p id="request-container" class="text-center ctm-text-light mt-3">
+                    <ul id="requests-container" class="text-center ctm-text-light mt-3">
                         You don't have any friend requests yet, but you can add one!
-                    </p>
+                    </ul>
                     <div id="search-form-container">
                         <form id="search-form" >
                             <div class="input-group">
