--- a/frontend/service/components/friends/styles.css
+++ b/frontend/service/components/friends/styles.css
@@ -108,3 +108,10 @@
     color: gray;
     border: 1px solid gray;
 }
+
+.pendant-btn:hover::after {
+    content: ' cancel ';
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    content: '\f05e'; /* Font Awesome icon for cancel (fa-ban) */
+}
