--- a/frontend/service/styles.css
+++ b/frontend/service/styles.css
@@ -51,6 +51,11 @@ body::before {
 .fw-semibold { font-weight: 600; }
 .fw-bold { font-weight: 700; }
 /* ctm text colours */
+.ctm-text {
+    font-family: 'Orbitron', sans-serif !important;
+    font-weight: normal;
+}
+
 .ctm-text-light { color: var(--light); }
 .ctm-text-accent { color: var(--accent); }
 .ctm-text-dark { color: var(--medium) }
