--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -22,9 +22,8 @@
             <div class="card ctm-card p-5">
                 <!-- <div class="card-body"> -->
                     <h2 class="ctm-text-title text-center">New friends</h2>
-                    <ul id="requests-container" class="text-center ctm-text-light mt-3">
-                        You don't have any friend requests yet, but you can add one!
-                    </ul>
+                    <div id="requests-container" class="text-center ctm-text-light mt-3">
+                    </div>
                     <div id="search-form-container">
                         <form id="search-form" >
                             <div class="input-group">
