we can get profile photo now

--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -22,7 +22,7 @@
             <div class="card ctm-card p-5">
                 <!-- <div class="card-body"> -->
                     <h2 class="ctm-text-title text-center">New friends</h2>
-                    <ul id="requests-container" class="text-center ctm-text-light mt-3">
+                    <div id="requests-container" class="text-center ctm-text-light mt-3">
                     </div>
                     <div id="search-form-container">
                         <form id="search-form" >
@@ -79,5 +79,4 @@
         </div>
       </div>
     </div>
-
 </div>
