/profile has now the real avatar

--- a/frontend/service/components/profile/profile.html
+++ b/frontend/service/components/profile/profile.html
@@ -7,7 +7,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-6 text-center">
                         <div class="profile-picture-container mb-3">
-                            <img id="profile-picture" src="https://avatars.githubusercontent.com/u/131959167?v=4" alt="profile picture" class="img-fluid ctm-img">
+                            <img id="profile-picture" alt="profile picture" class="img-fluid ctm-img">
                             <button id="change-picture" class="btn">Change</button>
                         </div>
                         <h3 id="username" class="mb-2"></h3>
