--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -22,9 +22,9 @@
             <div class="card ctm-card p-5">
                 <!-- <div class="card-body"> -->
                     <h2 class="ctm-text-title text-center">New friends</h2>
-                    <ul id="requests-container" class="text-center ctm-text-light mt-3">
-                        You don't have any friend requests yet, but you can add one!
-                    </ul>
+                    <div id="requests-container" class="text-center ctm-text-light mt-3">
+                    </div>
+
                     <div id="search-form-container">
                         <form id="search-form" >
                             <div class="input-group">
@@ -52,11 +52,10 @@
             <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
           </div>
           <div class="modal-body">
-            Are you sure you want to delete this friend?
           </div>
           <div class="modal-footer">
             <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
-            <button type="button" class="btn ctm-btn-secondary">Delete</button>
+            <button id="delete-friend-btn" type="button" class="btn ctm-btn-secondary">Delete</button>
           </div>
         </div>
       </div>
@@ -71,14 +70,12 @@
             <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
           </div>
           <div class="modal-body">
-            Are you sure you want to block this friend?
           </div>
           <div class="modal-footer">
             <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
-            <button type="button" class="btn ctm-btn-danger">Block</button>
+            <button id="block-friend-btn" type="button" class="btn ctm-btn-danger">Block</button>
           </div>
         </div>
       </div>
     </div>
-
 </div>
