--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -52,11 +52,10 @@
             <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
           </div>
           <div class="modal-body">
-            Are you sure you want to delete this friend?
           </div>
           <div class="modal-footer">
             <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
-            <button type="button" class="btn ctm-btn-secondary">Delete</button>
+            <button id="delete-friend-btn" type="button" class="btn ctm-btn-secondary">Delete</button>
           </div>
         </div>
       </div>
@@ -71,11 +70,10 @@
             <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
           </div>
           <div class="modal-body">
-            Are you sure you want to block this friend?
           </div>
           <div class="modal-footer">
             <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
-            <button type="button" class="btn ctm-btn-danger">Block</button>
+            <button id="block-friend-btn" type="button" class="btn ctm-btn-danger">Block</button>
           </div>
         </div>
       </div>
