--- a/frontend/service/components/profile/styles.css
+++ b/frontend/service/components/profile/styles.css
@@ -80,3 +80,11 @@
     color: var(--title);
     box-shadow: 4px 4px 7px rgba(0, 0, 0, 0.5), -4px -4px 7px rgba(157, 227, 187, 0.6);
 }
+
+.color-square {
+    width: 20px;
+    height: 20px;
+    border: 1px solid var(--dark);
+    border-radius: 5px;
+    display: inline-block;
+}
