--- a/frontend/service/components/chat/chat.html
+++ b/frontend/service/components/chat/chat.html
@@ -19,9 +19,13 @@
     </div> <!-- this closes the recent chats tab -->
     <!-- new chat tab -->
     <div id="new-chat" style="display:none;">
-        <div class="list-group-item back-to-recents">
+        <div id="back-to-recents" class="list-group-item back-to-recents" style="display: none;">
             <i class="fas fa-arrow-left me-2"></i>
             <span>back to recents</span>
+        </div>
+        <div id="start-a-new-chat" class="list-group-item"  style="display: none;"">
+            <i class="fas fa-plus me-2"></i>
+            <span>start a new chat</span>
         </div>
         <div id="friends-list" class="list-group list-group-flush p-2 ms-1 me-1">
             <!-- friends list will be rendered here -->
