--- a/frontend/service/components/chat/styles.css
+++ b/frontend/service/components/chat/styles.css
@@ -168,18 +168,33 @@
 	border-bottom-right-radius: 0;
 }
 
-.special-message {
-	background-color: #ffeb3b;
-	font-weight: bold;
-}
-
 #chat-body {
 	height: 350px;
 }
+
+/* this part is for game invitations:  */
 
 .progress {
     background-color: var(--dark);
 }
 .progress-bar {
     background: linear-gradient(to left, var(--lorange), var(--title), #920505cc);
+}
+
+.quick-game-invitation .card-title, .quick-game-invitation .card-text {
+	background-color: var(--medium);
+	padding: 3px;
+	border-radius: 5px;
+	color: var(--title);
+}
+
+.card-border {
+	background: linear-gradient(to left, var(--lorange), var(--title), #920505cc);
+	padding: 6px;
+	border-radius: 5px; /* Adjust as needed */
+}
+.game-invitation {
+	background-color: var(--dark);
+	border-radius: 5px; /* Adjust as needed */
+	padding: 5px; /* Adjust as needed */
 }
