--- a/frontend/service/components/chat/test.html
+++ b/frontend/service/components/chat/test.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../../styles.css">
 	<style>
-		.game-invitation .card-title, .game-invitation .card-text {
+		.quick-game-invitation .card-title, .quick-game-invitation .card-text {
 			background-color: var(--medium);
 			padding: 3px;
 			border-radius: 5px;
@@ -39,7 +39,7 @@
                 </div>
                 <div id="chat-messages" class="p-3">
 					
-					<div class="game-invitation card border-0 overflow-hidden" style="max-width: 250px;">
+					<div class="quick-game-invitation card border-0 overflow-hidden" style="max-width: 250px;">
 						<div class="progress position-absolute w-100 h-100" style="z-index: 0;">
 						  <div id="progress-bar" class="progress-bar bg-primary" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
