added a notifications dropdown

--- a/frontend/service/components/chat/invitations.html
+++ b/frontend/service/components/chat/invitations.html
@@ -12,7 +12,7 @@
 
         <style>
             .card-border {
-                background: linear-gradient(to left, var(--lorange), var(--title), #920505cc);
+                background: linear-gradient(to left, var(--lorange), var(--title), var(--transition));
                 padding: 6px;
                 border-radius: 5px; /* Adjust as needed */
             }
