--- a/frontend/service/components/sidebar/styles.css
+++ b/frontend/service/components/sidebar/styles.css
@@ -6,7 +6,7 @@
     left: -250px;
     z-index: 1000;
     transition: 0.3s;
-    background: linear-gradient(225deg, var(--dark), var(--darkish),  #920505cc, var(--title));
+    background: linear-gradient(225deg, var(--dark), var(--darkish),  var(--transition), var(--title));
     box-shadow: 0 0 10px -5px #00F56A, 10px 0 10px -5px #00F56A, 10px 0 15px -5px #00F56A, 10px 0 30px -5px #00F56Acc;
 }
 .sidebar.show {
