--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -95,7 +95,7 @@
 	</div>
 </div>
 <!-- modal -->
-<div class="modal fade" id="wait-game" tabindex="-1" aria-labelledby="waitGameLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="wait-game" tabindex="-1" aria-labelledby="waitGameLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -110,8 +110,8 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
+				<button type="button" class="btn ctm-btn" data-bs-dismiss="modal" data-action="cancel-invitation">Cancel</button>
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
