--- a/frontend/service/components/chat/invitations.html
+++ b/frontend/service/components/chat/invitations.html
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                     </div> -->
-                    <div class="card-border" style="max-width: 250px;">
+<!--                     <div class="card-border" style="max-width: 250px;">
                         <div class="game-invitation card overflow-hidden">
                             <div class="card-body position-relative p-3" style="z-index: 1;">
                               <h6 class="mb-2 ctm-text-title">tournament info</h6>
@@ -65,6 +65,14 @@
                               <div class="d-flex justify-content-between align-items-center">
                                 <button id="accept-btn" class="btn btn-sm ctm-btn flex-grow-1 me-1">got it!</button>
                               </div>
+                            </div>
+                        </div>
+                    </div> -->
+                    <div class="card-border" style="max-width: 250px;">
+                        <div class="game-invitation card overflow-hidden">
+                            <div class="card-body position-relative p-3" style="z-index: 1;">
+                              <h6 class="mb-2 ctm-text-title">Game invitation!</h6>
+                              <p class="card-text mb-2 small ctm-text-light">You sent a game invitation to fulanito</p>
                             </div>
                         </div>
                     </div>
