--- a/frontend/service/components/chat/styles.css
+++ b/frontend/service/components/chat/styles.css
@@ -1,13 +1,3 @@
-:root {
-	--dark: #2D1240;
-	--darkish: #462A56;
-	--medium: #5C3973;
-	--accent: #00F56A;
-	--light: #84CCA3;
-	--title: #F59C00;
-	--lorange: #f1c478;
-}
-
 #chat-container {
     position: fixed;
     bottom: 0;
@@ -49,11 +39,28 @@
 }
 
 #chat-messages {
-	display: flex;
-	flex-direction: column;
-	flex-grow: 1;
-	overflow-y: auto;
-	padding: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 10px;
+    position: relative; /* Ensure the parent element is positioned */
+	z-index: 1;
+}
+
+#chat-messages::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../../resources/chat-bg.png');
+    background-size: cover; /* Ensures the image covers the entire element */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents the image from repeating */
+    opacity: 0.7; /* Adjust the opacity as needed */
+    z-index: -1; /* Ensure the background is behind the content */
 }
 
 #recent-chats-list, #friends-list {
@@ -113,7 +120,12 @@
 .list-group-item {
 	background-color: var(--medium);
 	color: var(--light);
+	border: none;
 }
+
+.chat-item:not(:last-child), .friend-item:not(:last-child) { 
+	border-bottom: 1px solid #84cca362;
+} 
 
 .list-group-item:hover {
 	background-color: #2d124050;
