--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -28,7 +28,7 @@
 							<div id="friend-list" class="h-100 flex-column" style="display: none;">
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
 								<div id="friends-container" class="mb-3 friends-container"></div>
-								<button id="start-game-with-friend" class="btn ctm-btn mb-3" disabled>Start Game with Friend</button>
+								<button id="start-game-with-friend" class="btn ctm-btn mb-3" disabled>Start game with friend</button>
 							</div>
 							<div id="tournament-options" class="h-100 flex-column" style="display: none;">
 								<div id="ongoing-tournaments" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Ongoing Tournaments</div>
@@ -58,7 +58,7 @@
 							<div id="chess-friend-list" class="h-100 flex-column" style="display: none;">
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
 								<div id="chess-friends-container" class="mb-3 friends-container"></div>
-								<button id="start-chess-with-friend" class="btn ctm-btn mb-3" disabled>Start Game with Friend</button>
+								<button id="start-chess-with-friend" class="btn ctm-btn mb-3" disabled>Start game with friend</button>
 							</div>
 							<div id="chess-variants" class="h-100 flex-column" style="display: none;">
 								<div id="horde-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">
