--- a/frontend/service/components/chat/chat.html
+++ b/frontend/service/components/chat/chat.html
@@ -38,7 +38,7 @@
             <span id="current-chat-name"></span>
         </div>
         <div id="chat-messages" class="p-3">
-            <div class="game-invitation"></div>
+            <!-- chat messages are rendered here -->
         </div>
         <form id="chat-form" class="p-2">
             <div class="input-group">
