--- a/frontend/service/components/home/styles.css
+++ b/frontend/service/components/home/styles.css
@@ -105,3 +105,59 @@ img {
 #chess-variants .fas.fa-question-circle {
     font-size: 1.5em;
 }
+
+/* the loading bars */
+
+.loading-bars {
+    height: 150px;
+    rotate: 180deg;
+}
+.bar {
+    width: 20px;
+    background-color: #e7d9c2;
+    margin: 10px;
+    animation: wave 1.7s ease-in-out infinite;
+    border-radius: 20px;
+}
+
+.bar:nth-child(5) {
+    animation-delay: 0.2s;
+}
+.bar:nth-child(4) {
+    animation-delay: 0.4s;
+}
+.bar:nth-child(3) {
+    animation-delay: 0.6s;
+}
+.bar:nth-child(2) {
+    animation-delay: 0.8s;
+}
+.bar:nth-child(1) {
+    animation-delay: 1.0s;
+}
+@keyframes wave {
+    0% {
+        height: 20px;
+    }
+    50% {
+        height: 130px;
+        background-color: var(--title);
+    }
+    100% {
+        height: 20px;
+        background-color: var(--lorange);
+    }
+}
+
+#waiting-text {
+    animation: loadingBlink 1.7s ease-in-out infinite;
+}
+
+@keyframes loadingBlink {
+    0%, 100% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+}
