matchmaking modal done

--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -22,7 +22,6 @@
 							</div>
 							<div id="quick-play-options" class="h-100 flex-column" style="display: none !important;">
 								<div id="play-friend" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with a friend</div>
-								<div id="pong-random" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play random</div>
 								<div id="play-machine" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play against the machine</div>
 							</div>
 							<div id="friend-list" class="h-100 flex-column" style="display: none;">
@@ -47,13 +46,14 @@
 								<img src="../../resources/assets/chess.png" alt="Play Chess" class="img-fluid rounded mb-3">
 								<p class="ctm-text-light">Click to start a game of Chess!</p>
 							</div>
-							<div id="chess-options" class="h-100 flex-column" style="display: none;">
-								<div id="classic-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Classic</div>
-								<div id="spicy-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Spicy</div>
-							</div>
 							<div id="chess-friend-options" class="h-100 flex-column" style="display: none;">
 								<div id="chess-friend" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with a friend</div>
 								<div id="chess-random" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play random</div>
+								<div id="chess-local" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play local</div>
+							</div>
+							<div id="chess-options" class="h-100 flex-column" style="display: none;">
+								<div id="classic-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Classic</div>
+								<div id="spicy-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Spicy</div>
 							</div>
 							<div id="chess-friend-list" class="h-100 flex-column" style="display: none;">
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
