tournament edition update

--- a/frontend/service/components/tournament/new-tournament.html
+++ b/frontend/service/components/tournament/new-tournament.html
@@ -29,6 +29,7 @@
 <section id="pendant-tournament-container" class="blinking-neon-frame" style="display: none;">
 	<div class="card ctm-card p-5 ctm-text-light">
 	  <h2 class="text-center ctm-text-title">Tournament Status</h2>
+	  <h4 class="text-center ctm-text-light">Tournament name: <span id="edit-tournament-name"></span></h4>
 	  <div id="tournament-status-container">
 		<div class="mb-3">
 		  <h4 id="tournament-name-display" class="ctm-text-title text-center"></h4>
