preparing files for matchmaking

--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -55,6 +55,14 @@
 								<div id="classic-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Classic</div>
 								<div id="spicy-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Spicy</div>
 							</div>
+							<div id="matchmaking-options" class="h-100 flex-column" style="display: none;">
+								<div class="switch d-flex justify-content-center">
+									<button class="switch-btn switch-btn-left flex-grow-1 mx-1 active" data-mode="local">Play Local</button>
+									<button class="switch-btn switch-btn-right flex-grow-1 mx-1" data-mode="ai">
+									</button>   
+									<span>Play against the machine</span>
+								</div>
+							</div>
 							<div id="chess-friend-list" class="h-100 flex-column" style="display: none;">
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
 								<div id="chess-friends-container" class="mb-3 friends-container"></div>
