--- a/frontend/service/components/stats/styles.css
+++ b/frontend/service/components/stats/styles.css
@@ -1,10 +1,13 @@
 .history {
-	height: 90%;
+	max-height: 490px;
 	overflow-y: auto;
 	border-radius: 5px;
 	border: 1px solid var(--light);
 	background-color: var(--dark);
-  }
+}
+#full-chess-history {
+	max-height: 345px;
+}
 
 .stats {
 	border-radius: 5px;
@@ -17,7 +20,9 @@
 	margin-bottom: 15px;
 	background-color: var(--transparent-dark);
 }
-
+.history-card:last-child {
+    margin-bottom: 0;
+}
 .history-card .score {
     font-size: 1.5rem;
     border-radius: 5px;
